<resources>
    <string name="app_name">Awesome Beatles Player</string>
    <string name="beatles">The Beatles</string>
    <string name="beatles_yellow_submarine">Yellow Submarine</string>
    <string name="beatles_hard_days">A hard day\'s night</string>
    <string name="beatles_twist_shout">Twist and Shout</string>
    <string name="beatles_let_it_be">Let it be</string>
    <string name="main_screen_text">"The data would be obtained from an online database such as Spotify does it (Unfortunately I wasn't able to manage it to work YET).\nUsers can play and stop the music, can put it onto the favourites list and can get detailed information about each song.\nThe Home button takes the user back to this screen!\nInfos can be found at the bottom of the activities!</string>
    <string name="go_to_library">Go to the library!</string>
    <string name="ok">OK!</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="yellow_sm_detail">The music-loving inhabitants of Pepperland are under siege by the Blue Meanies, a nasty group of music-hating creatures. The Lord Mayor of Pepperland (Dick Emery) dispatches sailor Old Fred (Lance Percival) to Liverpool, England, where he is to recruit the help of the Beatles (John Lennon, Paul McCartney, George Harrison, Ringo Starr). The sympathetic Beatles ride a yellow submarine to the occupied Pepperland, where the Blue Meanies have no chance against the Fab Four\'s groovy tunes.\n\nRelease date: August 20, 1970\nDirectors: George Dunning, Al Brodax, Robert Balser, Jack Stokes\nCharacters: Jeremy Hilary Boob, Ph.D, Chief Blue Meanie, Old Fred, Lord Mayor, Max, Ringo, George, Paul, John Lennon</string>
    <string name="hard_days_night_detail">A Hard Day\'s Night is the third studio album by the English rock band the Beatles, released on 10 July 1964, with side one containing songs from the soundtrack to their film A Hard Day\'s Night.\n\nRelease date: June 26, 1964\nLabel: United Artists Records</string>
    <string name="twist_and_shout">"Twist and Shout" is a 1961 song written by Phil Medley and Bert Berns (later credited as "Bert Russell"). The song was originally recorded by The Top Notes. It first became a chart hit as a cover single by the Isley Brothers in 1962. The song has since been covered by several artists, including the Beatles on their first album Please Please Me (1963), as well as the Tremeloes in 1962 and the Who in 1970 and 1984.\n\nReleased 1961\nWriter(s): Bert Berns, Phil Medley\nProducer(s): Phil Spector</string>
    <string name="let_it_be">Let It Be is the twelfth and final studio album by the English rock band the Beatles. It was released on 8 May 1970, almost a month after the group\'s break-up. Like most of the band\'s previous releases, it was a number one album in many countries, including both the US and the UK, and was released in tandem with the motion picture of the same name.\n\nReleased:8 May 1970 (UK), 18 May 1970 (US)</string>
    <string name="main_description">On this screen the user can play and stop the music and can add or delete to/from the favourites list..\nEvery hit on play button will increase the number of hits.\nAs the music player is declared empty first and then the path for the media is assigned to it, it can play only 1 song at a time. Unfortunately I couldn\'t manage to set all the other song\'s play button back to default if a song is played.\nAnother thing is in progress to store hits and isFavourited values with sharedPreferences...</string>
    <string name="favs_description">On this screen used will see all the songs which was added to the list (But it still needs sharedPreferences).\nAnother function would be great to be done is making new playlists. Just like in Spotify.</string>
    <string name="detailed_descriptions">On the detailed info screen user can read some info about the song.\n It would be nice to connect the seek bar with the songs process...\nPrevious, Play, Stop and next buttons are working also.</string>
</resources>
